src/CasperParser.java
/* CasperParser.java */
/* Generated By:JavaCC: Do not edit this line. CasperParser.java */
import model.*;
import java.util.*;
public class CasperParser implements CasperParserConstants {

    public static void main(String [] args){
        CasperParser parser;
        if(args.length == 0){
            System.out.println("CasperParser: Reading from Standard Input...");
            parser = new CasperParser(System.in);
        }
        else if(args.length == 1){
            System.out.println("CasperParser: Reading from file " + args[0] + "...");
            try{
                parser = new CasperParser(new java.io.FileInputStream(args[0]));
            }
            catch(java.io.FileNotFoundException e){
                System.out.println("CasperParser: File " + args[0] + "  not found");
                return;
            }
        }
        else{
        System.out.println("CasperParser: Usage is one of : ");
        System.out.println("\u005ct\u005ct java CasperParser < inputFile");
        System.out.println("OR");
        System.out.println("\u005ct\u005ct java CasperParser inputFile");
        return;
        }

        try{
            Protocol p = parser.script();

        }
        catch(ParseException e){
            System.out.print(e.getMessage());
        }


    }

    public static String stringify(ArrayList<String> values){
        StringBuilder builder = new StringBuilder();
        for(String str: values){
            builder.append(str);
        }
        return builder.toString();
    }

// Grammar Prod Rules

// Basic Def
  static final public 
ArrayList<String> atom() throws ParseException {Token t; ArrayList<String> atomValues = new ArrayList();
    if (jj_2_1(2)) {
      fn_app(atomValues);
{if ("" != null) return atomValues;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ID:{
        t = jj_consume_token(ID);
atomValues.add(t.image);    {if ("" != null) return atomValues;}
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void fn_app(ArrayList<String> values) throws ParseException {Token t;StringBuilder tmp = new StringBuilder();
    t = jj_consume_token(ID);
tmp.append(t.image);
    t = jj_consume_token(L_PAREN);
tmp.append(t.image);
    t = jj_consume_token(ID);
tmp.append(t.image);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
      t = jj_consume_token(COMMA);
tmp.append(t.image);
      t = jj_consume_token(ID);
tmp.append(t.image);
    }
    t = jj_consume_token(R_PAREN);
tmp.append(t.image); values.add(tmp.toString());
  }

  static final public ArrayList<String> msg() throws ParseException {Token t; ArrayList<String> msgValues = new ArrayList();
    cpt(msgValues);
    label_2:
    while (true) {
      if (jj_2_2(2)) {
        ;
      } else {
        break label_2;
      }
      t = jj_consume_token(COMMA);
msgValues.add(t.image);
      cpt(msgValues);
    }
{if ("" != null) return msgValues;}
    throw new Error("Missing return statement in function");
  }

  static final public void cpt(ArrayList<String> msgValues) throws ParseException {Token t;
    if (jj_2_3(2)) {
      t = jj_consume_token(ID);
msgValues.add(t.image);
      t = jj_consume_token(MOD);
msgValues.add(t.image);
      term(msgValues);
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ID:
      case L_PAREN:
      case L_BRACE:{
        term(msgValues);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case MOD:{
          t = jj_consume_token(MOD);
msgValues.add(t.image);
          msgAtom(msgValues);
          break;
          }
        default:
          jj_la1[2] = jj_gen;
          ;
        }
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void term(ArrayList<String> msgValues) throws ParseException {Token t;
    msgAtom(msgValues);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case XOR:{
      t = jj_consume_token(XOR);
msgValues.add(t.image);
      term(msgValues);
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      ;
    }
  }

  static final public void msgAtom(ArrayList<String> msgValues) throws ParseException {Token t; ArrayList<String> collector = new ArrayList(); StringBuilder tmp = new StringBuilder();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ID:{
      t = jj_consume_token(ID);
msgValues.add(t.image);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case L_PAREN:{
        t = jj_consume_token(L_PAREN);
msgValues.add(t.image);
        collector = msg();
msgValues.addAll(collector);
        t = jj_consume_token(R_PAREN);
msgValues.add(t.image);
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        ;
      }
      break;
      }
    case L_BRACE:{
      t = jj_consume_token(L_BRACE);
msgValues.add(t.image);
      collector = msg();
msgValues.addAll(collector);
      t = jj_consume_token(R_BRACE);
msgValues.add(t.image);
      t = jj_consume_token(L_BRACE);
msgValues.add(t.image);
      cpt(msgValues);
      t = jj_consume_token(R_BRACE);
msgValues.add(t.image);
      break;
      }
    case L_PAREN:{
      t = jj_consume_token(L_PAREN);
msgValues.add(t.image);
      collector = msg();
msgValues.addAll(collector);
      t = jj_consume_token(R_PAREN);
msgValues.add(t.image);
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public Token type_name() throws ParseException {Token t;
    t = jj_consume_token(ID);
{if ("" != null) return t;}
    throw new Error("Missing return statement in function");
  }

  static final public Token process_name() throws ParseException {Token t;
    t = jj_consume_token(ID);
{if ("" != null) return t;}
    throw new Error("Missing return statement in function");
  }

  static final public Protocol script() throws ParseException {Protocol p = new Protocol(); Intruder i; MessageList m = new MessageList(); ArrayList<String> msgStrings = new ArrayList();
    free_vars();
    processes();
    msgStrings = prot_desc();
m.setMessages(msgStrings);
    spec_section();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case EQ:{
      equivalences();
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      ;
    }
    actual_vars();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case FUNCS:{
      functions();
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      ;
    }
    system();
    i = intruder();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case CHANNELS:{
      channels();
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    jj_consume_token(0);
p.setIntruder(i);  p.setMessageList(m);   {if ("" != null) return p;}
    throw new Error("Missing return statement in function");
  }

  static final public void free_vars() throws ParseException {
    jj_consume_token(FREE_VARS);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INVERSE_KEYS:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        break label_3;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ID:{
        var_dec();
        break;
        }
      case INVERSE_KEYS:{
        inv_keys_dec();
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void var_dec() throws ParseException {
    jj_consume_token(ID);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        break label_4;
      }
      jj_consume_token(COMMA);
      jj_consume_token(ID);
    }
    jj_consume_token(COLON);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ID:{
      type_expr();
      break;
      }
    case TIMESTAMP:{
      jj_consume_token(TIMESTAMP);
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case L_SQUARE:{
      subtype_expr();
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      ;
    }
  }

  static final public void subtype_expr() throws ParseException {
    jj_consume_token(L_SQUARE);
    jj_consume_token(ID);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        break label_5;
      }
      jj_consume_token(COMMA);
      jj_consume_token(ID);
    }
    jj_consume_token(R_SQUARE);
  }

  static final public void type_expr() throws ParseException {
    type_name();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case X:
    case ARROW:{
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case X:{
          ;
          break;
          }
        default:
          jj_la1[16] = jj_gen;
          break label_6;
        }
        jj_consume_token(X);
        type_name();
      }
      jj_consume_token(ARROW);
      type_name();
      break;
      }
    default:
      jj_la1[17] = jj_gen;
      ;
    }
  }

  static final public void inv_keys_dec() throws ParseException {
    jj_consume_token(INVERSE_KEYS);
    inv_key_pair();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        break label_7;
      }
      jj_consume_token(COMMA);
      inv_key_pair();
    }
  }

  static final public void inv_key_pair() throws ParseException {
    jj_consume_token(L_PAREN);
    jj_consume_token(ID);
    jj_consume_token(COMMA);
    jj_consume_token(ID);
    jj_consume_token(R_PAREN);
  }

  static final public void processes() throws ParseException {
    jj_consume_token(PROCESSES);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[19] = jj_gen;
        break label_8;
      }
      process_def();
    }
  }

  static final public void process_def() throws ParseException {Token t;
    process_name();
    jj_consume_token(L_PAREN);
    jj_consume_token(ID);
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[20] = jj_gen;
        break label_9;
      }
      jj_consume_token(COMMA);
      jj_consume_token(ID);
    }
    jj_consume_token(R_PAREN);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case KNOWS:{
      knows_stmt();
      break;
      }
    default:
      jj_la1[21] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case GENERATES:{
      gen_stmt();
      break;
      }
    default:
      jj_la1[22] = jj_gen;
      ;
    }
  }

  static final public void knows_stmt() throws ParseException {
    jj_consume_token(KNOWS);
    atom();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[23] = jj_gen;
        break label_10;
      }
      jj_consume_token(COMMA);
      atom();
    }
  }

  static final public void gen_stmt() throws ParseException {
    jj_consume_token(GENERATES);
    jj_consume_token(ID);
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[24] = jj_gen;
        break label_11;
      }
      jj_consume_token(COMMA);
      jj_consume_token(ID);
    }
  }

  static final public ArrayList<String> prot_desc() throws ParseException {ArrayList<String> msgStrings = new ArrayList(); ArrayList<String> collector = new ArrayList();
    jj_consume_token(PROT_DESC);
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LINE_NO:
      case LESS_THAN:{
        ;
        break;
        }
      default:
        jj_la1[25] = jj_gen;
        break label_12;
      }
      if (jj_2_4(3)) {
        collector = prot_msg();
msgStrings.add(stringify(collector));
      } else if (jj_2_5(3)) {
        collector = env_msg_send();
msgStrings.add(stringify(collector));
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case LINE_NO:
        case LESS_THAN:{
          collector = env_msg_rec();
msgStrings.add(stringify(collector));
          break;
          }
        default:
          jj_la1[26] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
{if ("" != null) return msgStrings;}
    throw new Error("Missing return statement in function");
  }

  static final public ArrayList<String> prot_msg() throws ParseException {ArrayList<String> msgValues = new ArrayList();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LESS_THAN:{
      assignment_line();
      break;
      }
    default:
      jj_la1[27] = jj_gen;
      ;
    }
    jj_consume_token(LINE_NO);
    jj_consume_token(DOT);
    jj_consume_token(ID);
    jj_consume_token(ARROW);
    jj_consume_token(ID);
    jj_consume_token(COLON);
    msgValues = msg();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case L_SQUARE:{
      test_line();
      break;
      }
    default:
      jj_la1[28] = jj_gen;
      ;
    }
{if ("" != null) return msgValues;}
    throw new Error("Missing return statement in function");
  }

  static final public void assignment_line() throws ParseException {
    jj_consume_token(LESS_THAN);
    assignment();
    label_13:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SEMI_COLON:{
        ;
        break;
        }
      default:
        jj_la1[29] = jj_gen;
        break label_13;
      }
      jj_consume_token(SEMI_COLON);
      assignment();
    }
    jj_consume_token(GREATER_THAN);
  }

  static final public void assignment() throws ParseException {
    jj_consume_token(ID);
    jj_consume_token(ASSIGNMENT);
    fdr_expr();
  }

  static final public void test_line() throws ParseException {
    jj_consume_token(L_SQUARE);
    test();
    jj_consume_token(R_SQUARE);
  }

  static final public void test() throws ParseException {
    fdr_expr();
  }

  static final public void fdr_expr() throws ParseException {
    label_14:
    while (true) {
      jj_consume_token(LETTER);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LETTER:{
        ;
        break;
        }
      default:
        jj_la1[30] = jj_gen;
        break label_14;
      }
    }
    jj_consume_token(NOT_EQUAL);
    label_15:
    while (true) {
      jj_consume_token(LETTER);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LETTER:{
        ;
        break;
        }
      default:
        jj_la1[31] = jj_gen;
        break label_15;
      }
    }
  }
